# kurimod

./: CHANGELOG.md  NOTICE  README.md  pyproject.toml  test_async_behavior.py
.github/workflows/: deploy.yml  test-deploy.yml
Kurimod/: __init__.py  config.py
Kurimod/config/: __init__.py
Kurimod/helpers/: __init__.py  helpers.py
Kurimod/listen/: __init__.py  callback_query_handler.py  chat.py  client.py  message_handler.py  user.py
Kurimod/nav/: __init__.py  pagination.py
Kurimod/types/: identifier.py  listener.py
Kurimod/utils/: __init__.py  patch.py
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: intro.md
docs/docs/getting-started/: advanced-examples.md  configuration.md  examples.md  initialization.md  installation.md  intro.md  kurigram-compatibility.md
docs/docs/reference/: client-methods.md  index.md
docs/docs/reference/modules/config/: _category_.yml  index.md
docs/docs/reference/modules/exceptions/: _category_.yml  listener-stopped.md  listener-timeout.md
docs/docs/reference/modules/helpers/: _category_.yml  (+1 more)
docs/docs/release-notes/: v2-0-0.md  v2-1-0.md  v3-0-0.md  v3-1-0.md  v3-2-0.md
docs/src/components/ChatSimulator/: index.jsx
docs/src/components/KurimodChatSimulator/: index.jsx
docs/src/components/KurimodCodeBox/: index.jsx
docs/src/components/PyromodChatSimulator/: index.jsx
docs/src/components/PyromodCodeBox/: index.jsx
docs/src/components/SelectVersionTabs/: index.jsx
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
docs/static/: CNAME
examples/: dice.py
(+13 files in other folders)
