[project]
name = "kurimod"
version = "3.2.0"
description = "A monkeypatcher add-on for Kurigram that does conversation handling"
authors = [
    { name = "Arthur", email = "ohmyarthurr@gmail.com" }
]
dependencies = [
    "kurigram"
]
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/ohmyarthur/kurimod"
Repository = "https://github.com/ohmyarthur/kurimod"
Documentation = "https://ohmyarthur.github.io/kurimod"
"Bug Tracker" = "https://github.com/ohmyarthur/kurimod/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
